--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -1,3 +1,4 @@
 <h1><%=@skill.name%></h1>
 
-<p><%= link_to "Head back", skills_path %></p>
+<p><%= link_to "Edit", edit_skill_path(@skill) %></p>
+<p><%= link_to "Delete", skill_path(@skill), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
