add crud for projects

--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render('layouts/errors', :object => @task) %>
+<%= render('layouts/errors', :object => @skill) %>
 
 <%= form_for [@skill, @project] do |f| %>
   <%= f.label :name %>
