--- a/app/views/skills/show.html.erb
+++ b/app/views/skills/show.html.erb
@@ -9,13 +9,13 @@
     <%= project.name  %> :
     <%= project.description %>
     <br>
-    <%= link_to "Edit Project", edit_skill_projects_path(@skill, project) %> |
+    <%= link_to "Edit Project", edit_skill_project_path(@skill, project) %> |
     <%= link_to "Delete Project", skill_project_path(@skill, project), :data => {:confirm => "Are you sure?", :method => "delete"} %>
   </li>
   <% end %>
 </ul>
 <% end %>
-<%= link_to "Add Project", new_skill_projects_path(@skill) %>
+<%= link_to "Add Project", new_skill_project_path(@skill) %>
 
 <p><%= link_to "Edit", edit_skill_path(@skill) %></p>
 <p><%= link_to "Delete", skill_path(@skill), :data => {:confirm => "Are you sure?", :method => "delete"} %></p>
