add integration tests, fix bug with projects controller and add readme

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
 <body>
 
 <%= yield %>
-<p><%= link_to "Head back", skills_path %></p>
+<p><%= link_to "Head back", skills_path, class: 'btn btn-primary'%></p>
 
 </body>
 </html>
