--- a/app/views/skills/index.html.erb
+++ b/app/views/skills/index.html.erb
@@ -1,3 +1,21 @@
+<!doctype html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Bob Ellis - Resume</title>
+        <link rel="stylesheet" href="style.css">
+        <script type="text/javascript" src="//use.typekit.net/lyj3wzr.js"></script>
+        <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <body>
+        <div class="page">
+            <div class="section row">
+                <h1 class="col"><span style="font-weight:700">Bob</span> Ellis</h1>
+                <div class="contact-info col-right">
+                    <div>512 . 705 . 6300</div>
+                    <div><a href="mailto:bobellis.tx@gmail.com">bobellis.tx@gmail.com</a></div>
+                </div>
+            </div>
+
 <h1>Skills</h1>
 
 <ul>
@@ -6,4 +24,7 @@
     <% end %>
 </ul>
 
-<p><%=link_to "New Skill", new_skill_path%></p>
+<p><%=link_to "New Skill", new_skill_path, :class => 'btn btn-info'%></p>
+
+    </body>
+</html>
