--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,13 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  <% if current_user %>
+        <%= link_to("Log Out", destroy_user_session_path, :method => :delete, :class => "btn btn-warning") %>
+        You are logged in as <%= current_user.email %>
+    <% else %>
+        <%= link_to "Login", new_user_session_path, :class => "btn btn-success" %>
+        <%= link_to "Sign Up", new_user_registration_path, :class => "btn btn-primary" %>
+    <% end %>
 
 <%= yield %>
 <p><%= link_to "Head back", skills_path, class: 'btn btn-primary'%></p>
