--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,13 @@
     <div class="container-fluid">
   <% if current_user %>
         <%= link_to("Log Out", destroy_user_session_path, :method => :delete, :class => "btn btn-custom btn-xs") %>
-        You are logged in as <%= current_user.email %>
+        <p class="login-info" align="right">You are logged in as <%= current_user.email %></p>
     <% else %>
         <%= link_to "Login", new_user_session_path, :class => "btn btn-success" %>
         <%= link_to "Sign Up", new_user_registration_path, :class => "btn btn-primary" %>
     <% end %>
+    <p class="notice" align="right"><%= notice %></p>
+    <p class="alert" align="right"><%= alert %></p>
   </div>
 </nav>
 
@@ -23,8 +25,6 @@
 <%= yield %>
 <p><%= link_to "Head back", skills_path, class: 'btn btn-primary'%></p>
 </div>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
 
 </body>
 </html>
