--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,17 +21,35 @@
    background-color: #E9E0D6;
  }
 
+ .login-info {
+   color: white;
+   font-weight: 500;
+   letter-spacing: 1px;
+   text-transform: uppercase;
+ }
+
 .navbar {
   background-color: #29ABA4;
   opacity: .9;
   color: black;
   font-size: 20px;
-  padding-top: .5em;
+  padding-top: 0em;
 }
 
 .btn-custom {
   background: #EB7260;
   color: white;
+  height: 50px;
+  padding-top: 0px;
+}
+
+.btn-skill {
+  background: #EB7260;
+  color: white;
+  padding: 14px 24px;
+  padding-top: 10px;
+
+
 }
 .btn {
     padding: 14px 24px;
