--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -48,9 +48,19 @@
   color: white;
   padding: 14px 24px;
   padding-top: 10px;
-
-
 }
+
+.btn-delete-comment {
+  background: #EB7260;
+  font-size: 10px;
+  color: white;
+  padding: 14px 24px;
+  text-transform: uppercase;
+  font-weight: 700;
+
+  border: 0 none;
+}
+
 .btn {
     padding: 14px 24px;
     border: 0 none;
