--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,8 @@
     <div class="container-fluid">
   <% if current_user %>
         <%= link_to("Log Out", destroy_user_session_path, :method => :delete, :class => "btn btn-custom btn-xs") %>
-        <p class="login-info" align="right">You are logged in as <%= current_user.email %></p>
+        <p class="login-info" align="right">You are logged in as
+          <%= current_user.email %></p>
     <% else %>
         <%= link_to "Login", new_user_session_path, :class => "btn btn-success" %>
         <%= link_to "Sign Up", new_user_registration_path, :class => "btn btn-primary" %>
@@ -23,7 +24,16 @@
 
 <div class="container yield-container">
 <%= yield %>
-<p><%= link_to "Head back", skills_path, class: 'btn btn-primary'%></p>
+<p></p>
+<nav class="navbar navbar-default navbar-fixed-bottom">
+  <div class="container-fluid">
+<% if current_user %>
+      <%= link_to "Head back", skills_path, class: 'btn btn-primary'%>
+      <%= link_to "Blog", posts_path, class: 'btn btn-primary'%>
+      <%= link_to "Recommendations", recommendations_path, class: 'btn btn-primary'%>
+  <% end %>
+</div>
+</nav>
 </div>
 
 </body>
